--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Painel De Administração Responsivo</title>
 </head>
 
@@ -14,49 +15,49 @@
             <ul>
                 <li>
                     <a href="#">
-                        <span class="icon"></span>
-                        <span class="tittle" Paulo Vitor></span>
+                        <span class="icon"><ion-icon name="logo-apple"></ion-icon></span>
+                        <span class="tittle"> Paulo Vitor</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <span class="icon"></span>
+                        <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
                         <span class="tittle">Painel De Controle</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <span class="icon"></span>
+                        <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
                         <span class="tittle">Clientes</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <span class="icon"></span>
+                        <span class="icon"><ion-icon name="chatbox-ellipses-outline"></ion-icon></span>
                         <span class="tittle">Mensagens</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <span class="icon"></span>
+                        <span class="icon"><ion-icon name="help-outline"></ion-icon></span>
                         <span class="tittle">Ajuda</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <span class="icon"></span>
+                        <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
                         <span class="tittle">Configurações</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <span class="icon"></span>
+                        <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
                         <span class="tittle">Senha</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <span class="icon"></span>
+                        <span class="icon"><ion-icon name="log-out-outline"></ion-icon></span>
                         <span class="tittle">Sair</span>
                     </a>
                 </li>
