--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Painel De Administração Responsivo</title>
 </head>
 
@@ -16,7 +16,7 @@
                 <li>
                     <a href="#">
                         <span class="icon"><ion-icon name="logo-apple"></ion-icon></span>
-                        <span class="tittle"> Paulo Vitor</span>
+                        <span class="tittle">Paulo Vitor</span>
                     </a>
                 </li>
                 <li>
