--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg .com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
+    <script>
+        // add hovered class ub selected list item
+        let list = document.querySelectorAll('.navigation li')
+        function activeLink(){
+            list.forEach((item)=> 
+            item.classList.remove('hovered'))
+            this.classList.add('hovered')
+        }
+        list.forEach((item) => 
+        item.addEventListener('mouseover', activeLink))
+    </script>
+
 </body>
 
 </html>
