--- a/index.html
+++ b/index.html
@@ -15,53 +15,131 @@
             <ul>
                 <li>
                     <a href="#">
-                        <span class="icon"><ion-icon name="logo-apple"></ion-icon></span>
+                        <span class="icon">
+                            <ion-icon name="logo-apple"></ion-icon>
+                        </span>
                         <span class="tittle">Paulo Vitor</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <span class="icon"><ion-icon name="home-outline"></ion-icon></span>
+                        <span class="icon">
+                            <ion-icon name="home-outline"></ion-icon>
+                        </span>
                         <span class="tittle">Painel De Controle</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <span class="icon"><ion-icon name="people-outline"></ion-icon></span>
+                        <span class="icon">
+                            <ion-icon name="people-outline"></ion-icon>
+                        </span>
                         <span class="tittle">Clientes</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <span class="icon"><ion-icon name="chatbox-ellipses-outline"></ion-icon></span>
+                        <span class="icon">
+                            <ion-icon name="chatbox-ellipses-outline"></ion-icon>
+                        </span>
                         <span class="tittle">Mensagens</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <span class="icon"><ion-icon name="help-outline"></ion-icon></span>
+                        <span class="icon">
+                            <ion-icon name="help-outline"></ion-icon>
+                        </span>
                         <span class="tittle">Ajuda</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <span class="icon"><ion-icon name="settings-outline"></ion-icon></span>
+                        <span class="icon">
+                            <ion-icon name="settings-outline"></ion-icon>
+                        </span>
                         <span class="tittle">Configurações</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
+                        <span class="icon">
+                            <ion-icon name="lock-closed-outline"></ion-icon>
+                        </span>
                         <span class="tittle">Senha</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <span class="icon"><ion-icon name="log-out-outline"></ion-icon></span>
+                        <span class="icon">
+                            <ion-icon name="log-out-outline"></ion-icon>
+                        </span>
                         <span class="tittle">Sair</span>
                     </a>
                 </li>
             </ul>
+        </div>
+
+        <!-- main -->
+        <div class="main">
+            <div class="topbar">
+                <div class="toggle">
+                    <ion-icon name="menu-outline"></ion-icon>
+                </div>
+                <!-- search -->
+                <div class="search">
+                    <label>
+                        <input type="text" placeholder="Pesquise Aqui">
+                        <ion-icon name="search-outline"></ion-icon>
+                    </label>
+                </div>
+                <!-- userImg -->
+                <div class="user">
+                    <img src="images/user.jpg" alt="">
+                </div>
+            </div>
+
+            <!-- cards -->
+            <div class="cardBox">
+                <div class="card">
+                    <div>
+                        <div class="numbers">1,504</div>
+                        <div class="cardName">Visualizações Diárias</div>
+                    </div>
+                    <div class="iconBx">
+                        <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="card">
+                    <div>
+                        <div class="numbers">80</div>
+                        <div class="cardName">Vendas</div>
+                    </div>
+                    <div class="iconBx">
+                        <ion-icon name="cart-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="card">
+                    <div>
+                        <div class="numbers">284</div>
+                        <div class="cardName">Comentários</div>
+                    </div>
+                    <div class="iconBx">
+                        <ion-icon name="chatbubbles-outline"></ion-icon>
+                    </div>
+                </div>
+                <div class="card">
+                    <div>
+                        <div class="numbers">$7,842</div>
+                        <div class="cardName">ganhos</div>
+                    </div>
+                    <div class="iconBx">
+                        <ion-icon name="cash-outline"></ion-icon>
+                    </div>
+                </div>
+                
+            </div>
+
         </div>
     </div>
 
@@ -69,15 +147,26 @@
     <script nomodule src="https://unpkg .com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
     <script>
+        // MenuToggle
+        let toggle = document.querySelector('.toggle')
+        let navigation = document.querySelector('.navigation')
+        let main = document.querySelector('.main')
+
+        toggle.onclick = function () {
+            navigation.classList.toggle('active')
+            main.classList.toggle('active')
+        }
+
+
         // add hovered class ub selected list item
         let list = document.querySelectorAll('.navigation li')
-        function activeLink(){
-            list.forEach((item)=> 
-            item.classList.remove('hovered'))
+        function activeLink() {
+            list.forEach((item) =>
+                item.classList.remove('hovered'))
             this.classList.add('hovered')
         }
-        list.forEach((item) => 
-        item.addEventListener('mouseover', activeLink))
+        list.forEach((item) =>
+            item.addEventListener('mouseover', activeLink))
     </script>
 
 </body>
