lista de detalhes do pedido
OK

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li>
                     <a href="#">
                         <span class="icon">
-                            <ion-icon name="logo-apple"></ion-icon>
+                            <ion-icon name="logo-windows"></ion-icon>
                         </span>
                         <span class="tittle">Paulo Vitor</span>
                     </a>
@@ -137,7 +137,59 @@
                         <ion-icon name="cash-outline"></ion-icon>
                     </div>
                 </div>
-                
+            </div>
+
+            <!-- order details list -->
+
+            <div class="details">
+                <div class="recentOrders">
+                    <div class="cardHeader">
+                        <h2>Pedidos Recentes</h2>
+                        <a href="#" class="btn">Ver Todos</a>
+                    </div>
+                    <table>
+                        <thead>
+                            <tr>
+                                <td>Nome</td>
+                                <td>Preço</td>
+                                <td>Pagamento</td>
+                                <td>Status</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Excel</td>
+                                <td>$200</td>
+                                <td>Vencido</td>
+                                <td><span class="status return">Retornou</span></td>
+                            </tr>
+                            <tr>
+                                <td>Assistência</td>
+                                <td>$212</td>
+                                <td>Processando</td>
+                                <td><span class="status pending">Pendente</span></td>
+                            </tr>
+                            <tr>
+                                <td>Manutenção</td>
+                                <td>$500</td>
+                                <td>Pago</td>
+                                <td><span class="status concluded">Concluído</span></td>
+                            </tr>
+                            <tr>
+                                <td>SSD</td>
+                                <td>$320</td>
+                                <td>Pago</td>
+                                <td><span class="status inprogress">Encaminhado</span></td>
+                            </tr>
+                            <tr>
+                                <td>Instalar Drivers</td>
+                                <td>$200</td>
+                                <td>Processando</td>
+                                <td><span class="status pending">Pendente</span></td>
+                            </tr>           
+                        </tbody>
+                    </table>
+                </div>
             </div>
 
         </div>
