--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                 </div>
             </div>
 
-            <!-- order details list -->
-
             <div class="details">
+
+            <!-- order details list -->
                 <div class="recentOrders">
                     <div class="cardHeader">
                         <h2>Pedidos Recentes</h2>
@@ -161,7 +161,7 @@
                                 <td>Excel</td>
                                 <td>$200</td>
                                 <td>Vencido</td>
-                                <td><span class="status return">Retornou</span></td>
+                                <td><span class="status return">Cancelado</span></td>
                             </tr>
                             <tr>
                                 <td>Assistência</td>
@@ -186,10 +186,87 @@
                                 <td>$200</td>
                                 <td>Processando</td>
                                 <td><span class="status pending">Pendente</span></td>
-                            </tr>           
+                            </tr>
+                            <tr>
+                                <td>World</td>
+                                <td>$120</td>
+                                <td>Vencido</td>
+                                <td><span class="status return">Cancelado</span></td>
+                            </tr>  
+                            <tr>
+                                <td>Notebook Intel</td>
+                                <td>$3400</td>
+                                <td>Pago</td>
+                                <td><span class="status concluded">Entregue</span></td>
+                            </tr>
+                            <tr>
+                                <td>Formatação</td>
+                                <td>$50</td>
+                                <td>Pago</td>
+                                <td><span class="status concluded">Concluído</span></td>
+                            </tr>
+                            <tr>
+                                <td>Sistema De Planilhas</td>
+                                <td>$5000</td>
+                                <td>Pago</td>
+                                <td><span class="status concluded">Concluído</span></td>
+                            </tr>    
+                            <tr>
+                                <td>Licença Anti Vírus AVG</td>
+                                <td>$435</td>
+                                <td>Vencido</td>
+                                <td><span class="status return">Cancelado</span></td>
+                            </tr> 
+                                <td>Impressora 3D</td>
+                                <td>$7000</td>
+                                <td>Pago</td>
+                                <td><span class="status inprogress">Encaminhado</span></td>
+                            </tr>        
                         </tbody>
                     </table>
                 </div>
+
+                <!-- New Customers -->
+                <div class="recentCustomers">
+                    <div class="cardHeader">
+                        <h2>Clientes Recentes</h2>
+                    </div>
+                    <table>
+                        <tr>
+                            <td width="60px"><div class="imgBx"><img src="images/img1.jpg"></div></td>
+                            <td><h4>David<br><span>Itália</span></h4></td>
+                        </tr>
+                        <tr>
+                            <td width="60px"><div class="imgBx"><img src="images/img2.jpg"></div></td>
+                            <td><h4>Muhammad<br><span>India</span></h4></td>
+                        </tr>
+                        <tr>
+                            <td width="60px"><div class="imgBx"><img src="images/img3.jpg"></div></td>
+                            <td><h4>Amelia<br><span>França</span></h4></td>
+                        </tr>
+                        <tr>
+                            <td width="60px"><div class="imgBx"><img src="images/img4.jpg"></div></td>
+                            <td><h4>Olivia<br><span>USA</span></h4></td>
+                        </tr>
+                        <tr>
+                            <td width="60px"><div class="imgBx"><img src="images/img5.jpg"></div></td>
+                            <td><h4>David<br><span>Itália</span></h4></td>
+                        </tr>
+                        <tr>
+                            <td width="60px"><div class="imgBx"><img src="images/img6.jpg"></div></td>
+                            <td><h4>Juking<br><span>Japão</span></h4></td>
+                        </tr>
+                        <tr>
+                            <td width="60px"><div class="imgBx"><img src="images/img7.jpg"></div></td>
+                            <td><h4>Diana<br><span>Malásia</span></h4></td>
+                        </tr>
+                        <tr>
+                            <td width="60px"><div class="imgBx"><img src="images/img8.jpg"></div></td>
+                            <td><h4>Brolly<br><span>Japão</span></h4></td>
+                        </tr>
+                    </table>
+                </div>
+
             </div>
 
         </div>
